# openff-evaluator

./: .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  oe_license.gpg  oe_license.txt.enc  oe_license.txt.gpg  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  test.txt.gpg
.github/: CONTRIBUTING.md
.github/workflows/: aws.yaml  ci.yaml  continous_integration.yaml  examples.yaml  lint.yaml
devtools/: README.md
docs/: Makefile  README.md  api.rst  architecture.rst  builddocs.rst  calculationbackend.rst  calculationlayers.rst  clientserver.rst  conf.py  daskbackends.rst  dataclasses.rst  environment.yml  general_simulation_practices.rst  gettingstarted.rst  host_guest_simulations.rst  index.rst  install.rst  liquid_mixture_property_practices.rst  liquid_mixture_simulations.rst  liquid_mixtures.rst  localstorage.rst  make.bat  neat_liquid_property_practices.rst  neat_liquid_simulations.rst  physicalproperties.rst  property_simulation_practices.rst  propertydatasets.rst  propertyestimator.rst  propertyworkflows.rst  protocolgroups.rst  protocols.rst  releasehistory.rst  releaseprocess.rst  replicators.rst  reweightinglayer.rst  simulation_protocols.rst  simulationlayer.rst  storagebackend.rst  thermomldatasets.rst  tutorial01.ipynb  (+4 more)
evaluator/: __init__.py  _version.py  plugins.py  thermodynamics.py
integration_tests/: utils.py
propertyestimator/: __init__.py  _version.py  client.py  forcefield.py  plugins.py  propertyestimator.py  server.py  substances.py  thermodynamics.py
(+902 files in other folders)
